Fix color contrast for accessibility

--- a/src/components/Projects/styles/styles.css
+++ b/src/components/Projects/styles/styles.css
@@ -16,10 +16,11 @@
 }
 
 .card {
+  color:#fefae0;
   height: 300px;
   margin: 0 auto;
   margin-top: 3.5rem;
-  background-color: #187498;
+  background-color: rgba(24, 116, 152, 0.75);
   border-radius: 0.5rem;
   display: flex;
 
@@ -63,6 +64,10 @@
 
 .tech ul li {
   margin: 0 auto;
+}
+
+.tech .icon {
+  color: #121619;
 }
 
 .project-buttons {
